--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       - "80:80"
     volumes:
         - ./dashboard:/usr/share/nginx/html
+        - ./docker/nginx/nginx.conf:/etc/nginx/nginx.conf
   apiserver:
     build: api/.
     ports:
