Añadida comunicación con el servidor REST para los eventos de entrada de correo, temperatura y humedad. También experimentando con el método de detección de correo para intentar mejorar su fiabilidad.

--- a/iot/platformio.ini
+++ b/iot/platformio.ini
@@ -12,8 +12,9 @@
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
-;upload_port = /dev/ttyUSB2
+upload_port = /dev/ttyUSB2
 lib_deps =
   ESP8266_SSD1306
   DHT sensor library
   NTPClient
+  ESPasyncTCP
