redis and more things

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,10 @@ services:
       - mongo:/data/db
     ports:
       - "27017:27017"
+  redis:
+    image: redis:3.0
+    ports:
+      - "6379:6379"
 volumes:
   mongo:
     driver: "local"
